# zhaba

./: .gitignore  Cargo.toml  LICENSE  Rocket.toml  db.sqlite
backend/: .env
backend/migrations/2017-09-17-105136_create_users/: up.sql
backend/src/api/: mod.rs
backend/src/api/update/: edit_post.rs  logout.rs
backend/src/api/view/: login.rs  posts.rs
backend/src/app/: error.rs  model.rs
frontend/: build.cmd  elm-package.json
frontend/src/: fielddesc.elm  fields.elm  register.elm  zhaba.elm
migrations/2017-09-17-105136_create_users/: down.sql  up.sql
src/: main.rs  models.rs
src/api/: mod.rs
src/api/update/: edit_post.rs  login.rs  logout.rs  mod.rs  new_post.rs  post.rs  register.rs
src/api/view/: login.rs  mod.rs  users.rs
src/app/: error.rs  mod.rs  model.rs  settings.rs
src/app/db/: conn.rs  mod.rs  models.rs  schema.rs
src/kit/: form.rs  mod.rs
src/model/: mod.rs
src/pages/: index.rs
static/: index.html
