[package]
name = "zhaba"
version = "0.1.0"
authors = ["Michael.Ilyin <milyin@gmail.com>"]

[dependencies]
serde="*"
serde_derive="*"
serde_json="*"
rocket = "*"
rocket_codegen = "*"
diesel = { version = "*", features = ["sqlite"] }
diesel_codegen = { version = "*", features = ["sqlite"] }
dotenv = "*"
r2d2-diesel="*"
r2d2="*"
time="*"
lazy_static="*"

[dependencies.rocket_contrib]
version="*"
default-features = false
features = ["json"]
